Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -119,7 +119,7 @@ stages:
     - task: PowerShell@2
       inputs:
         targetType: 'inline'
-        script: 'Get-Item $(System.ArtifactsDirectory)'
+        script: 'Get-ChildItem $(System.ArtifactsDirectory)'
 
     # - task: AzurePowerShell@5
     #   inputs:
