--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -114,7 +114,7 @@ stages:
       inputs:
         buildType: 'current'
         downloadType: 'specific'
-        downloadPath: '$(System.ArtifactsDirectory)'
+        downloadPath: '$(System.ArtifactsDirectory)/SignedScripts/'
 
     - task: PowerShell@2
       inputs:
