--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -121,22 +121,22 @@ stages:
         targetType: 'inline'
         script: 'Get-ChildItem $(System.ArtifactsDirectory)/SignedScripts/'
 
-    # - task: AzurePowerShell@5
-    #   inputs:
-    #     azureSubscription: 'ca-nepeters-demo-test(3762d87c-ddb8-425f-b2fc-29e5e859edaf)'
-    #     ScriptType: 'InlineScript'
-    #     # Inline: 'Import-AzAutomationDscConfiguration -AutomationAccountName $(automation-account) -ResourceGroupName $(resource-group) -SourcePath $(config-location) -Force -Published'
-    #     Inline: 'Import-AzAutomationDscConfiguration -AutomationAccountName $(automation-account) -ResourceGroupName $(resource-group) -SourcePath $(Build.ArtifactStagingDirectory)/iis.ps1 -Force -Published'
-    #     azurePowerShellVersion: 'LatestVersion'
-    #   displayName: Import Configuration
+    - task: AzurePowerShell@5
+      inputs:
+        azureSubscription: 'ca-nepeters-demo-test(3762d87c-ddb8-425f-b2fc-29e5e859edaf)'
+        ScriptType: 'InlineScript'
+        # Inline: 'Import-AzAutomationDscConfiguration -AutomationAccountName $(automation-account) -ResourceGroupName $(resource-group) -SourcePath $(config-location) -Force -Published'
+        Inline: 'Import-AzAutomationDscConfiguration -AutomationAccountName $(automation-account) -ResourceGroupName $(resource-group) -SourcePath $(System.ArtifactsDirectory)/SignedScripts/iis.ps1 -Force -Published'
+        azurePowerShellVersion: 'LatestVersion'
+      displayName: Import Configuration
 
-    # - task: AzurePowerShell@5
-    #   inputs:
-    #     azureSubscription: 'ca-nepeters-demo-test(3762d87c-ddb8-425f-b2fc-29e5e859edaf)'
-    #     ScriptType: 'InlineScript'
-    #     azurePowerShellVersion: 'LatestVersion'
-    #     Inline: |
-    #       # $Params = @{"DomainName"="contoso.com";"DNSAddress"="10.0.2.4"}
-    #       Start-AzAutomationDscCompilationJob -ConfigurationName $(config-name) -AutomationAccountName $(automation-account) -ResourceGroupName $(resource-group)
-    #   displayName: Compile Configuration
+    - task: AzurePowerShell@5
+      inputs:
+        azureSubscription: 'ca-nepeters-demo-test(3762d87c-ddb8-425f-b2fc-29e5e859edaf)'
+        ScriptType: 'InlineScript'
+        azurePowerShellVersion: 'LatestVersion'
+        Inline: |
+          # $Params = @{"DomainName"="contoso.com";"DNSAddress"="10.0.2.4"}
+          Start-AzAutomationDscCompilationJob -ConfigurationName $(config-name) -AutomationAccountName $(automation-account) -ResourceGroupName $(resource-group)
+      displayName: Compile Configuration
     
