--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -125,18 +125,18 @@ stages:
       inputs:
         azureSubscription: 'ca-nepeters-demo-test(3762d87c-ddb8-425f-b2fc-29e5e859edaf)'
         ScriptType: 'InlineScript'
-        # Inline: 'Import-AzAutomationDscConfiguration -AutomationAccountName $(automation-account) -ResourceGroupName $(resource-group) -SourcePath $(config-location) -Force -Published'
         Inline: 'Import-AzAutomationDscConfiguration -AutomationAccountName $(automation-account) -ResourceGroupName $(resource-group) -SourcePath $(System.ArtifactsDirectory)/SignedScripts/iis.ps1 -Force -Published'
         azurePowerShellVersion: 'LatestVersion'
       displayName: Import Configuration
 
-    - task: AzurePowerShell@5
-      inputs:
-        azureSubscription: 'ca-nepeters-demo-test(3762d87c-ddb8-425f-b2fc-29e5e859edaf)'
-        ScriptType: 'InlineScript'
-        azurePowerShellVersion: 'LatestVersion'
-        Inline: |
-          # $Params = @{"DomainName"="contoso.com";"DNSAddress"="10.0.2.4"}
-          Start-AzAutomationDscCompilationJob -ConfigurationName $(config-name) -AutomationAccountName $(automation-account) -ResourceGroupName $(resource-group)
-      displayName: Compile Configuration
+    # Signed configurations not supported, convert to MOF and manually import
+    # - task: AzurePowerShell@5
+    #   inputs:
+    #     azureSubscription: 'ca-nepeters-demo-test(3762d87c-ddb8-425f-b2fc-29e5e859edaf)'
+    #     ScriptType: 'InlineScript'
+    #     azurePowerShellVersion: 'LatestVersion'
+    #     Inline: |
+    #       # $Params = @{"DomainName"="contoso.com";"DNSAddress"="10.0.2.4"}
+    #       Start-AzAutomationDscCompilationJob -ConfigurationName $(config-name) -AutomationAccountName $(automation-account) -ResourceGroupName $(resource-group)
+    #   displayName: Compile Configuration
     
