--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -121,13 +121,28 @@ stages:
         targetType: 'inline'
         script: 'Get-ChildItem $(System.ArtifactsDirectory)/SignedScripts/'
 
-    - task: AzurePowerShell@5
+    - task: PowerShell@2
       inputs:
-        azureSubscription: 'ca-nepeters-demo-test(3762d87c-ddb8-425f-b2fc-29e5e859edaf)'
-        ScriptType: 'InlineScript'
-        Inline: 'Import-AzAutomationDscConfiguration -AutomationAccountName $(automation-account) -ResourceGroupName $(resource-group) -SourcePath $(System.ArtifactsDirectory)/SignedScripts/iis.ps1 -Force -Published'
-        azurePowerShellVersion: 'LatestVersion'
-      displayName: Import Configuration
+        targetType: 'inline'
+        script: |
+          Find-Module ActiveDirectoryDsc | Install-Module -Force
+          Find-Module xComputerManagement | Install-Module -Force
+          Find-Module xNetworking | Install-Module -Force
+          Find-Module xPendingReboot | Install-Module -Force
+
+    - task: PowerShell@2
+      inputs:
+        targetType: 'inline'
+        script: |
+          . $(System.ArtifactsDirectory)/SignedScripts/iis.ps1
+
+    # - task: AzurePowerShell@5
+    #   inputs:
+    #     azureSubscription: 'ca-nepeters-demo-test(3762d87c-ddb8-425f-b2fc-29e5e859edaf)'
+    #     ScriptType: 'InlineScript'
+    #     Inline: 'Import-AzAutomationDscConfiguration -AutomationAccountName $(automation-account) -ResourceGroupName $(resource-group) -SourcePath $(System.ArtifactsDirectory)/SignedScripts/iis.ps1 -Force -Published'
+    #     azurePowerShellVersion: 'LatestVersion'
+    #   displayName: Import Configuration
 
     # Signed configurations not supported, convert to MOF and manually import
     # - task: AzurePowerShell@5
