Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -137,7 +137,7 @@ stages:
         Inline: |
           . $(System.ArtifactsDirectory)/SignedScripts/iis.ps1
           iis
-          Import-AzAutomationDscNodeConfiguration -AutomationAccountName $(automation-account) -ResourceGroupName $(resource-group) -ConfigurationName "iis" -Path ./localhost.mof -Force
+          Import-AzAutomationDscNodeConfiguration -AutomationAccountName $(automation-account) -ResourceGroupName $(resource-group) -ConfigurationName "iis" -Path .\iis\localhost.mof -Force
         azurePowerShellVersion: 'LatestVersion'
 
     # - task: AzurePowerShell@5
